# peripherals-motor

./: CMakeLists.txt  LICENSE  NOTICE  README.md  package.xml  test.yaml
.github/workflows/: code-style.yml
config/: config_parameters.yaml
include/: motor.h
src/: motor_core.c  motor_core.h
src/drivers/: drv_pwm_RoHS.c  drv_pwm_generic.c
src/drivers/drv_485_ddt_m601c111/: M0601C.md  README.md
src/drivers/drv_485_ddt_m601c111/src/: drv_485_ddt_m601c.c
src/drivers/drv_485_ddt_m601c111/test/: test_m601_state.c  test_m601c.c  test_m601c_pos.c  test_once_pos.c
src/drivers/drv_can_ddt_m152d133/: M1502D.md  README.md
src/drivers/drv_can_ddt_m152d133/include/: drv_can_ddt_m152d133.h
src/drivers/drv_can_ddt_m152d133/src/: drv_can_ddt_m152d133.cpp
src/drivers/drv_can_ddt_m152d133/test/: test_m152d133.cpp  test_m152d133_calibrate.cpp  test_m152d133_passive.cpp
src/drivers/drv_can_ddt_p1010b/: P1010B.md  README.md
src/drivers/drv_can_ddt_p1010b/src/: drv_can_ddt_p1010b.cpp
src/drivers/drv_can_ddt_p1010b/test/: test_p1010b.cpp  test_p1010b_current.cpp  test_p1010b_pos_traj.cpp  test_p1010b_state.cpp
src/drivers/drv_can_dm/: CMakeLists.txt  README_CAN_DM.md
src/drivers/drv_can_dm/include/: DmHW.h  control_loop.h  damiao.h  damiao_hw.h  damiao_pack.h  pack_damiao.h  socketcan.h  types.h
src/drivers/drv_can_dm/src/: DmHW.cpp  control_loop.cpp  damiao.cpp  damiao_hw.cpp  damiao_pack.cpp  drv_can_dm.cpp  pack_damiao.cpp  socketcan.cpp
src/drivers/drv_can_dm/test/: test.cpp  test_dm_framework.cpp  test_dm_mode_switch.cpp
src/drivers/drv_canopen_jmc/: README.md
src/drivers/drv_canopen_jmc/src/: drv_canopen_jmc_adapter.c
src/drivers/drv_ethercat_jmc/: CMakeLists.txt  README_ETHERCAT_JMC.md
src/drivers/drv_ethercat_jmc/include/: ethercat_cia402.h  jmc_ihss42.h
src/drivers/drv_ethercat_jmc/src/: drv_ethercat_jmc_adapter.c  ethercat_cia402.c  jmc_ihss42.c
src/drivers/drv_ethercat_jmc/test/: test_ethercat_jmc.c
src/drivers/drv_uart_ddt_m603c111/: M0603C.md  README.md
src/drivers/drv_uart_ddt_m603c111/src/: drv_uart_ddt_m603c111.c
src/drivers/drv_uart_ddt_m603c111/test/: test_m603c.c  test_m603c_pos.c  test_state.c
src/drivers/drv_uart_feetech/: CMakeLists.txt  LICENSE  README_UART_FEETECH.md
src/drivers/drv_uart_feetech/include/: HLSCL.h  INST.h  SCS.h  SCSCL.h  SCSerial.h  SCServo.h  SMS_STS.h  feetech_pack.h
src/drivers/drv_uart_feetech/src/: CMakeLists.txt  HLSCL.cpp  SCS.cpp  SCSCL.cpp  SCSerial.cpp  SMS_STS.cpp  feetech_motor_adapter.cpp  feetech_pack.cpp
src/drivers/drv_uart_feetech/test/: test_debug.cpp  test_simple.c
src/drivers/drv_uart_feetech/test/examples/HLSCL/Broadcast/: Broadcast.cpp
src/drivers/drv_uart_feetech/test/examples/HLSCL/CalibrationOfs/: CalibrationOfs.cpp
src/drivers/drv_uart_feetech/test/examples/HLSCL/FeedBack/: FeedBack.cpp
src/drivers/drv_uart_feetech/test/examples/HLSCL/Ping/: Ping.cpp
src/drivers/drv_uart_feetech/test/examples/HLSCL/ProgramEprom/: ProgramEprom.cpp
src/drivers/drv_uart_feetech/test/examples/HLSCL/RegWritePos/: RegWritePos.cpp
src/drivers/drv_uart_feetech/test/examples/HLSCL/SyncRead/: SyncRead.cpp
src/drivers/drv_uart_feetech/test/examples/HLSCL/SyncWritePos/: SyncWritePos.cpp
src/drivers/drv_uart_feetech/test/examples/HLSCL/WritePos/: WritePos.cpp
src/drivers/drv_uart_feetech/test/examples/HLSCL/WriteSpe/: WriteSpe.cpp
src/drivers/drv_uart_feetech/test/examples/SCSCL/Broadcast/: Broadcast.cpp
src/drivers/drv_uart_feetech/test/examples/SCSCL/FeedBack/: FeedBack.cpp
src/drivers/drv_uart_feetech/test/examples/SCSCL/Ping/: Ping.cpp
src/drivers/drv_uart_feetech/test/examples/SCSCL/ProgramEprom/: ProgramEprom.cpp
src/drivers/drv_uart_feetech/test/examples/SCSCL/RegWritePos/: RegWritePos.cpp
src/drivers/drv_uart_feetech/test/examples/SCSCL/SyncWritePos/: SyncWritePos.cpp
src/drivers/drv_uart_feetech/test/examples/SCSCL/WritePWM/: CMakeLists.txt  WritePos.cpp
src/drivers/drv_uart_feetech/test/examples/SCSCL/WritePos/: WritePos.cpp
src/drivers/drv_uart_feetech/test/examples/SMS_STS/Broadcast/: Broadcast.cpp  CMakeLists.txt
src/drivers/drv_uart_feetech/test/examples/SMS_STS/CalibrationOfs/: CMakeLists.txt  CalibrationOfs.cpp
src/drivers/drv_uart_feetech/test/examples/SMS_STS/FeedBack/: CMakeLists.txt  FeedBack.cpp
src/drivers/drv_uart_feetech/test/examples/SMS_STS/Ping/: CMakeLists.txt  Ping.cpp
src/drivers/drv_uart_feetech/test/examples/SMS_STS/ProgramEprom/: CMakeLists.txt  ProgramEprom.cpp
src/drivers/drv_uart_feetech/test/examples/SMS_STS/RegWritePos/: CMakeLists.txt  RegWritePos.cpp
src/drivers/drv_uart_feetech/test/examples/SMS_STS/SyncRead/: CMakeLists.txt  SyncRead.cpp
src/drivers/drv_uart_feetech/test/examples/SMS_STS/SyncWritePos/: CMakeLists.txt  SyncWritePos.cpp
src/drivers/drv_uart_feetech/test/examples/SMS_STS/WritePos/: CMakeLists.txt  WritePos.cpp
src/drivers/drv_uart_feetech/test/examples/SMS_STS/WriteSpe/: CMakeLists.txt  WriteSpe.cpp
src/drivers/drv_uart_rm/: CMakeLists.txt  pyproject.toml
src/drivers/drv_uart_rm/src/: bindings.rs  c_api.rs  control_loop.rs  drv_uart_xl330.c  lib.rs
src/drivers/drv_uart_rm/test/: test_uart_xl330.c
src/drivers/drv_uart_xl330/: CMakeLists.txt  Cargo.toml
src/drivers/drv_uart_xl330/src/: c_api.rs  controller.rs  drv_uart_xl330.c
src/drivers/drv_uart_xl330/test/: test_uart_xl330.c
test/: test_motor_can.c  test_motor_ecat.c  test_motor_pwm.c  test_motor_uart.c  test_uart_xl330.c
tests/: test_config.h  test_functional.sh  test_manual.sh  test_motor_485_ddt_m601c111.c  test_motor_can.c  test_motor_can_ddt_m152d133.c  test_motor_can_ddt_p1010b.c  test_motor_canopen_jmc.c  test_motor_ecat.c  test_motor_pwm.c  test_motor_uart.c  test_motor_uart_ddt_m603c111.c  test_uart_xl330.c
