[build-system]
requires = ["maturin==1.9.4"]
build-backend = "maturin"

[project]
name = "reachy_mini_motor_controller"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[project.optional-dependencies]
tests = [
    "pytest",
]
[tool.maturin]
features = ["python", "pyo3/extension-module"]
